--- a/static/i18n/zh.json
+++ b/static/i18n/zh.json
@@ -1,6 +1,6 @@
 {
   "lang": "zh",
-  "start": "开始游戏",
+  "start": "开始吃颖耀",
   "normal": "普通模式",
   "endless": "无尽模式",
   "practice": "练习模式",
@@ -15,10 +15,10 @@
   "ok": "确定",
   "name": "名字",
   "comment": "留言",
-  "eat-kano": "吃掉小鹿乃",
+  "eat-kano": "吃掉林颖耀",
   "default-dfjk": "默认为DFJK",
   "default-20s": "默认为20秒",
-  "game-title": "新概念音游",
+  "game-title": "吃到林颖耀",
   "game-intro1": "从最底下的开始",
   "game-intro2": "看你能得多少分",
   "record-rank": "用于纪录排行(特殊字符会被过滤)",
@@ -31,7 +31,7 @@
   "home": "主页",
   "rank": "排行",
   "repo": "仓库",
-  "text-level-1": "试着好好练一下?",
+  "text-level-1": "手速快就能吃到林颖耀啦！！",
   "text-level-2": "TCL",
   "text-level-3": "TQL",
   "text-level-4": "您",
